--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,8 @@ pytz==2022.7
 
 #auth
 PyJWT==2.5.0
-passlib[bcrypt]==1.7.4
+bcrypt==3.2.0
+passlib==1.7.4
 cryptography==38.0.1
 pycryptodome==3.15.0
 sendgrid==6.9.7
